--- a/src/styles/CV.css
+++ b/src/styles/CV.css
@@ -5,7 +5,10 @@
   min-width: 800px;
   max-width: 800px;
   min-height: 1100px;
+  max-height: 1100px;
   box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.3);
+  position: sticky;
+  top: 24px;
 }
 
 .header {
@@ -43,7 +46,6 @@ h3 {
 
 .description {
   line-height: 24px;
-  margin-bottom: 20px;
 }
 
 p {
@@ -52,10 +54,15 @@ p {
 }
 
 .side {
-  background-color: rgb(219, 219, 219);
+  background-color: rgb(224, 224, 224);
   padding: 24px;
 }
 
 h4 {
   margin-bottom: 8px;
+  font-weight: 500;
+}
+
+h3:not(:first-child) {
+  margin-top: 20px;
 }
